saving to github

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- ================ UNICONS ====================== -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+    <!-- ===================== TYPED ======================== -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
     <!-- ================SWIPER CSS===================== -->
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <!-- ==============================Custom=================== -->
@@ -88,7 +90,7 @@
                     </div>
                     <div class="home_data">
                         <h1 class="home_title">Hi, I'am Khanh</h1>
-                        <h3 class="homt_subtitle">Full Stack developer</h3>
+                        <h3 class="homt_subtitle">And I'm a <span class="typing"></span></h3>
                         <p class="home_description">
                             High level experience in web
                         </p>
